Fixes buttons flickering (those with counters) on page refresh and disabling hint for autocomplete

--- a/declarations_site/catalog/static/sass/partials/components/_search-form.scss
+++ b/declarations_site/catalog/static/sass/partials/components/_search-form.scss
@@ -87,6 +87,10 @@
       @media all and (min-width: 1024px) {
         margin-left: 7px;
         display: inline-block;
+        vertical-align: middle;
+      }
+      &:empty {
+        display: none;
       }
     }
     @media all and (max-width: 1023px) {
@@ -111,6 +115,7 @@
       }
     }
     @media all and (min-width: 1024px) {
+      line-height: 24px;
       padding: 11px 0;
       width: 175px;
     }
